fixing integration gap

--- a/src/styles/sections/fifthSection.scss
+++ b/src/styles/sections/fifthSection.scss
@@ -28,7 +28,7 @@
         justify-content: center;
         width: 100%;
         gap: 12%;
-
+        
         img:nth-of-type(2n+1) {
             width: 160px;
             height: 160px;
@@ -45,6 +45,7 @@
         display: flex;
         justify-content: center;
         width: 100%;
+        gap: 18%;
 
         img {
             width: 140px;
